--- a/templates/index.html
+++ b/templates/index.html
@@ -33,13 +33,13 @@
         </div>
       </div>
     </nav>
-  	<div class="container theme-showcase">
+    <div class="container theme-showcase">
       <div class="jumbotron">
         <div>
-          <h2 class="descr">Добро пожаловать в ITBursa</h2>
+          <h2 class="course">Добро пожаловать в ITBursa</h2>
           <p class="about">Мы специализируемся на модных языках программирования. Принципиальное наше отличие от других курсов - максимум практики и жесткая система обязательных домашних заданий.
           </p>
-          <h3 class="descr">Выбирай на каком курсе ты хочешь учится!</h3>
+          <h3 class="course">Выбирай на каком курсе ты хочешь учится!</h3>
           <div class="bs-example" data-example-id="simple-table">
           <table class="table table-striped table table-bordered">
             <caption>Список курсов</caption>
