--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 20px;
+  padding-top: 75px;
 }
 .jumbotron {
   text-align: center;
@@ -9,83 +9,53 @@ body {
   padding: 14px 24px;
   font-size: 14px;
 }
-.footer {
-  text-align: center;
-  height: 25px;
-}
-.course {
+.descr {
   text-align: left;
   font-size: 10px;
 }
-h1.course {
-  font-size: 32px;
+.contact {
+  text-align: center;
+  font-size: 30px;
+}  
+h1.descr {
+  font-size: 30px;
   font-weight: bold;
 }
-
-h2.course {
-  font-size: 20px;
-  font-weight: bold;
+.about{
+  padding: 0px 0px;
+  text-align: justify;
+  font-size: 10px;
 }
-
-h3.course {
-  font-size: 14px;
-  font-weight: bold;
-}
-
-p.course {
-  font-size: 14px;
-}
-
-
-ul.course {
-  list-style-type: none;
-}
-li.course {
-  font-weight: bold;
-  padding: 15px;
-  font-size: 18px;
-}
-ol.course {
-  font-weight: normal;
-  font-variant:normal;
-  font-size: 14px;
-}
-.footer {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  margin-top: 40px;
-  border-top: 1px solid #eee;
+.program {
+  min-height: 1px;
+  padding-right: 70px;
+  padding-left: 60px;
+  text-align: justify;
 }
 .row {
   text-align: left;
   padding: 5px 10px;
-  font-size: 14px;
+  font-size: 16px;
 }
-.panel-title
+.title
 {
-  font-size: 14px;
+  font-size: 24px;
   font-weight: bold;
 }
-.face {
-  margin: 0px auto;
-  display: block;
+.thumbnail .contact_caption {
+  padding: 9px;
+  color: #333;
 }
-.starter-regullar{
-  padding: 0px 70px;
+.contact_caption {
+  padding-top: 8px;
+  padding-bottom: 8px;
   text-align: left;
-  font-size: 10px;
 }
-.custom-header {
-  padding: 0px 80px;
+.footer {
+  text-align: left;
+  padding: 50px;
 }
 .table {
   text-align: left;
-}
-a.table {
-  color: black;
-  font-size: 14px;
-  font-weight: normal;
-}
-tr.generic {
-  background-color: aliceblue;
+  background-color: #F0F8FF;
 }
