--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,117 +1,70 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
-
-    <title>Main</title>
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Courses</title>
     {% load staticfiles %}
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <!-- Bootstrap theme -->
-    <!-- <link href="../static/css/bootstrap-theme.css" rel="stylesheet"> -->
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body role="document">
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="custom-header">
+    <script src="{% static 'js/bootstrap.js' %}"> </script>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+    <nav class="navbar navbar-fixed-top navbar-inverse">
+        <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">PyBursa</a>
+            <span class="icon-bar"></span>  
+            </button>
+            <a class="navbar-brand" href="#">ITBursa</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="{% url 'index' %}">Main</a></li>
+                    <li><a href="{% url 'contact' %}">Contacts</a></li>
+                    <li><a href="{% url 'students:list_view' %}">Students</a></li>
+                </ul>
+            </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-            <li><a href="{% url 'equation' %}">Equotion</a></li>
-          </ul>
-        </div>
-      </div>
     </nav>
-
-    <div class="container theme-showcase" role="main">
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        
-      </div>
-      <h1 class="course">Ooniversity</h1>
-             {% block content %}
-              <h2 class="course">{{ course.name }} course details</p>
-              <p class="course">{{ course.description }}</h3>
-              <h2 class="course">Course plan</h3>
-              <br>
-              <table class="table table-striped table table-bordered">
+    <div class="container theme-showcase">
+        <div class="jumbotron">
+            <h1 class="course">ITBursa</h1>
+            {% block content %}
+            <h2 class="course">{{ course.name }} course details</h2>
+            <p class="course">{{ course.description }}</p>
+            <h2 class="course">План курса</h2>
+            <table class="table table-striped table table-bordered">
                 <thead>
-                  <tr>
-                    <th>No</th>
-                    <th>Lesson</th>
-                    <th>Description</th>
-                  </tr>
+                    <tr>
+                    <th>#</th>
+                    <th>Тема</th>
+                    <th>Описание</th>
+                    </tr>
                 </thead>
                 <tbody>   
-				  {% for lesson in lessons%}
-                    <tr>
-                      <td>{{ lesson.order }}</td>
-                      <td>{{ lesson.subject }}</td>
-                      <td>{{ lesson.description }}</td>
-                    </tr>
-                  {% empty %}
-                    <h3>Not found!</h3>
-                  {% endfor %}
+                    {% for lesson in lessons%}
+                        <tr>
+                            <td>{{ lesson.order }}</td>
+                            <td>{{ lesson.subject }}</td>
+                            <td>{{ lesson.description }}</td>
+                        </tr>
+                    {% empty %}
+                        <h3>Not found!</h3>
+                    {% endfor %}
                 </tbody>
-              </table>
-              </br>
-        {% endblock %}
-      
-      
+            </table>
+            {% endblock %}
+        </div>
     </div>
-    
-   <!-- Site footer -->
-    <div class="navbar navbar-inverse navbar-fixed-bottom">
-      <div class="col-sm-3 col-sm-offset-5">
-        <a class="navbar-brand" href="https://www.youtube.com/watch?v=KxmLNctBi10">&copy; PyBursa 2015</a>
-      </div>
-      <!--<div class="container">
-        <p class="navbar-text pull-left">&copy; PyBursa 2015</p>
-        <p class="navbar-text pull-right"> Butstrap 3
-          <a href="https://www.youtube.com/watch?v=KxmLNctBi10">tutorial</a>
-          and
-          <a href="https://www.youtube.com/user/CodersGuide">coder's guide</a>.-->
-        </p>
-      </div>
-    </div>
-    
-    
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        
+    <footer class="footer">
+        <p>&copy; ITBursa 2015</p>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
+</body>
 </html>
