--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -47,38 +47,78 @@
     <div class="page-header text-align-center">
       <div class="container">
         <div class="jumbotron transparant-background-table">
-          <h2>{{student.name}} {{student.surname}}</h2>
-          <table class="table text-align-justify">
+          <h2>{{coach.user.first_name}} {{coach.user.last_name}}</h2>
+          <table class="table text-align-justify vertical-align-middle">
             <tr>
               <td>Birth Date</td>
-              <td>{{student.date_of_birth|date:"N d, Y"}}</td>
+              <td>{{coach.date_of_birth|date:"N d, Y"}}</td>
             </tr>
             <tr>
               <td>Address</td>
-              <td>{{student.address}}</td>
+              <td>{{coach.address}}</td>
             </tr>
             <tr>
               <td>E-mail</td>
-              <td>{{student.email}}</td>
+              <td>{{coach.email}}</td>
             </tr>
             <tr>
               <td>Skype</td>
-              <td>{{student.skype}}</td>
+              <td>{{coach.skype}}</td>
             </tr>
              <tr>
               <td>phone</td>
-              <td>{{student.phone}}</td>
+              <td>{{coach.phone}}</td>
             </tr>
-            </tr>
-             <tr>
-              <td>Courses</td>
-                {% for course in student.courses.all %}
+            <tr>
+              <td><b>Courses coach</b></td>
+                {% for course in courses_coach %}
                   {% ifequal forloop.counter 1 %}
-                    <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td>
+                  <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a>
+                      students
+                      <a href="{% url 'students:list_view' %}{{course_par}}{{course.id}}">
+                        <button type="button" class="btn btn-default" aria-label="Left Align">
+                          <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+                        </button>
+                      </a>
+                    </td>
                   {% else %}
                     <tr>
                       <td></td>
-                      <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td>
+                      <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a>
+                        students
+                        <a href="{% url 'students:list_view' %}{{course_par}}{{course.id}}">
+                          <button type="button" class="btn btn-default" aria-label="Left Align">
+                            <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+                          </button>
+                        </a>
+                      </td>
+                    </tr>
+                  {% endifequal %}
+                {% endfor %}
+            </tr>
+            <tr>
+              <td><b>Courses assistant</b></td>
+                {% for course_as in courses_assistant %}
+                  {% ifequal forloop.counter 1 %}
+                    <td><a href="{% url 'courses:detail' course_as.id %}">{{course_as}}</a>
+                      students
+                      <a href="{% url 'students:list_view' %}{{course_par}}{{course_as.id}}">
+                        <button type="button" class="btn btn-default" aria-label="Left Align">
+                          <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+                        </button>
+                      </a>
+                    </td>
+                  {% else %}
+                    <tr>
+                      <td></td>
+                      <td><a href="{% url 'courses:detail' course_as.id %}">{{course_as}}</a>
+                        students
+                        <a href="{% url 'students:list_view' %}{{course_par}}{{course_as.id}}">
+                          <button type="button" class="btn btn-default" aria-label="Left Align">
+                            <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+                          </button>
+                        </a>
+                      </td>
                     </tr>
                   {% endifequal %}
                 {% endfor %}
