--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -59,7 +59,7 @@
             </tr>
             <tr>
               <td>E-mail</td>
-              <td>{{coach.email}}</td>
+              <td>{{coach.user.email}}</td>
             </tr>
             <tr>
               <td>Skype</td>
