--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -54,11 +54,12 @@
             <div class="header-content-inner">
             <div class="slash-div">
             <h2> Student's list: </h2>
+            <hr>
             <br>
               <div class="table-responsive">
-                <table class="table table-hover table-bordered">
+                <table class="table table-bordered">
                     <thead>
-                      <tr class="success">
+                      <tr class="success" style="color: #505050">
                         <td><strong>ID</strong></td>
                         <td><strong>Full name</strong></td>
                         <td><strong>Address</strong></td>
