--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Start learn Linux now!</h1>
+                <h2>Start learn Linux and Openstack now!</h2>
                 <hr>
                 <a href="#program" class="btn btn-primary btn-xl page-scroll">course info</a>
             </div>
@@ -64,6 +64,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Courses:</h2>
+                    <hr>
                     <div class="table-responsive">
   <table class="table table-hover table-bordered">
       <thead>
