--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -54,10 +54,10 @@
             <div class="header-content-inner">
             <div class="slash-div">
             <h2> {{ student_detail.full_name }} <br>
-            <small>student's card </small></h2>
-            <br>
+            student's card</h2>
+            <hr>
               <div class="table-responsive">
-                <table class="table table-hover">
+                <table class="table  table-bordered">
                         <tbody>
                             <tr>
                                <td><strong>Birthday</strong></td>
