--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -43,7 +43,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
-            <li class="active"><a href="{% url 'students:list_view' %}">Студенты</a></li>
+            <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
             <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
           </ul>
         </div>
@@ -53,42 +53,62 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>{{ student_details.name }} {{ student_details.surname }}</h1>
+        <h1>{{ coach.user.first_name }} {{ coach.user.last_name }}</h1>
       </div>
-      <div class="table-responsive col-md-5">
-        <table class="table table-hover">
-          <thead>
-          </thead>
-          <tbody>
-            <tr class="success">
-              <td>дата рождения</td>
-              <td>{{ student_details.date_of_birth }}</td>
-            </tr>
-            <tr class="success">
-              <td>адрес</td>
-              <td>{{ student_details.address }}</td>
-            </tr>
-            <tr class="success">
-              <td>email</td>
-              <td>{{ student_details.email }}</td>
-            </tr>
-            <tr class="success">
-              <td>skype</td>
-              <td>{{ student_details.skype }}</td>
-            </tr>
-            <tr class="success">
-              <td>телефон</td>
-              <td>{{ student_details.phone }}</td>
-            </tr>
-            <tr class="success">
-              <td>курсы</td>
-              <td>
-                {% for course in student_details.courses.all %}
-                  <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
-                {% endfor %}
-              </td>
-            </tr>
-          </tbody>
+      <div>
+        <div class="table-responsive col-md-6">
+
+          <img alt="Coach's photo" src="{{ STATIC_URL }}images/coach_photo_{{ coach.id }}.jpg" class="img-rounded" />
+
+          <br><br><br>
+          <table class="table table-hover">
+          <thead></thead>
+          <tr class="success">
+            <td>дата рождения</td>
+            <td>{{ coach.date_of_birth }}</td>
+          </tr>
+          <tr class="success">
+            <td>адрес</td>
+            <td>{{ coach.address }}</td>
+          </tr>
+          <tr class="success">
+            <td>email</td>
+            <td>{{ coach.user.email }}</td>
+          </tr>
+          <tr class="success">
+            <td>skype</td>
+            <td>{{ coach.skype }}</td>
+          </tr>
+          <tr class="success">
+            <td>телефон</td>
+            <td>{{ coach.phone }}</td>
+          </tr>
+          <tr  class="success">
+            <td>Учитель курсов</td>
+            <td>
+              {% for course in course_coach %}
+                <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>
+                студенты курса
+                <a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+                  <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+                </a>
+                <br>
+              {% endfor %}
+            </td>
+          </tr>
+          <tr  class="success">
+            <td>Ассистент курсов</td>
+            <td>
+              {% for course in course_assistant %}
+                <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>
+                студенты курса
+                <a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+                  <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+                </a>
+                <br>
+              {% endfor %}
+            </td>
+          </tr>
         </table>
       </div>
     </div>
