--- a/templates/index.html
+++ b/templates/index.html
@@ -37,11 +37,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
+          <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Главная</a></li>
+            <li class="active"><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
             <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
             <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
@@ -62,7 +62,7 @@
       <h2>Популярные курсы</h2>
       <br>
       <div class="table-responsive">
-        <table class="table table-bordered table-condensed">
+        <table class="table table-hover table-condensed">
           <thead>
             <tr>
               <th class="text-center">Курс</th>
