--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -56,7 +56,7 @@
         <h1>Список студентов</h1>
       </div>
       <div class="table-responsive">
-        <table class="table table-hover table-bordered">
+        <table class="table table-hover">
           <thead>
             <tr>
               <th>#</th>
