--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -53,8 +53,7 @@
         <div class="header-content">
             <div class="header-content-inner">
             <div class="slash-div">
-            <h2> {{ student_detail.full_name }} <br>
-            Coach's card</h2>
+            <h2 class="panel-title">{{ coach_detail.user.first_name}} {{coach_detail.user.last_name }}</h2>
             <hr>
               <div class="table-responsive">
                 <table class="table  table-bordered">
