--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -54,19 +54,21 @@
       <div class="page-header">
         <h1>{{ course.name }}</h1>
       </div>
-      <p class="text-justify">{{ course.description }}</p>
+      <p>{{ course.description }}</p>
       <br>
       {% if course.coach %}
         <h1>Преподаватели</h1>
         <table class="table table-hover table-condensed">
           <thead>
             <tr>
-              <th>Учитель</th>
+              <th><h3>Учитель</h3></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.user.first_name }} {{ course.coach.user.last_name }}</a><br><br>
+              <td><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.user.first_name }} {{ course.coach.user.last_name }}</a>
+              <br>
+              <br>
             {{ course.coach.description }}</td>
           </tr>
         </tbody>
@@ -74,7 +76,7 @@
       <table class="table table-hover table-condensed">
         <thead>
           <tr>
-            <th>Ассистент</th>
+            <th><h3>Ассистент</h3></th>
           </tr>
         </thead>
         <tbody>
