--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,4 +197,7 @@ thead > tr > th {
 tbody > tr > td {
   vertical-align:middle !important;
 }
-
+div.table-responsive.col-md-6 > img {
+  border: 3px solid rgba(240,240,240,50);
+  margin-left: 18px;
+}
