--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -33,73 +33,52 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">        
+      <ul class="nav navbar-nav">
         <li><a href="/index/">Main</a></li>
 		<li><a href="/contact/">Contact</a></li>
 		<li class="active"><a href="/student_list/">Student<span class="sr-only">(current)</span></a></li>
 		<li><a href="/quadratic/results/">Quadratic</a></li>
-      </ul>   
-      
+      </ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div>
+{{courses_list}}
+</div>
+<div class="table-responsive">
+        <table class="table table-bordered table-condensed">
+            <thead>
+	            <tr>
+		            <th>No</th>
+		            <th>Surname Name</th>
+		            <th>Adress</th>
+		            <th>Skype</th>
+                    <th>Courses</th>
+	            </tr>
+             </thead>
+          <tbody>
+            {% for student in students %}
+                <tr>
+                    <td>{{ student.id }}</td>
+                    <td><a href="/student_detail/">{{ student.surname }} {{ student.name }}</a></td>
+                    <td>{{ student.address }}</td>
+                    <td>{{ student.skype }}</td>
+                    <td>
+                        {% for student_course in student.course.all %}
+                            <a href="/courses/{{student_course.id}} ">{{ student_course.name }}</a><br>
+                        {% endfor %}
+                    </td>
 
-<table class="table">
- <thead>
-	<tr>
-		<th>No</th>
-		<th>Surname</th>
-		<th>Name</th>
-		<th>Adress</th>
-		<th>Skype</th>
-	</tr>
- </thead>
- <tbody>
-	<tr>
-		<td><a href="/student_detail/">1</a></td>
-		<td>Popov</td>
-		<td>Ivan</td>
-		<td>Ukraine, Knarkov, street 1</td>
-		<td>popov.ivan</td>
-	</tr>
-	<tr>
-		<td><a href="#">2</a></td>
-		<td>Ivanov</td>
-		<td>Petya</td>
-		<td>Ukraine, Knarkov, street 2</td>
-		<td>ivanov.petya</td>
-	</tr>
-	<tr>
-		<td><a href="#">3</a></td>
-		<td>Petrov</td>
-		<td>Nikolay</td>
-		<td>Ukraine, Knarkov, street 3</td>
-		<td>petrov.nikolay</td>
-	</tr>
-	<tr>
-		<td><a href="#">4</a></td>
-		<td>Sidorov</td>
-		<td>Oleg</td>
-		<td>Ukraine, Knarkov, street 4</td>
-		<td>Sidorov.Oleg</td>
-	</tr>
-	<tr>
-		<td><a href="#">5</a></td>
-		<td>Babosov</td>
-		<td>Dima</td>
-		<td>Ukraine, Knarkov, street 5</td>
-		<td>Babosov.Dima</td>
-	</tr>
-	<tr>
-		<td><a href="#">6</a></td>
-		<td>Oblomov</td>
-		<td>Andrey</td>
-		<td>Ukraine, Knarkov, street 6</td>
-		<td>Oblomov.Oleg</td>
-	</tr>
- </tbody>
- </table>
-		
+
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+
+
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
