--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -37,11 +37,12 @@
 				<h3>{{ course.description }}</h3>
 			</div>
 			<div text-align='center'>
+			<h1>Преподователи курса</h1>
 				<h2 align="center">Преподователь курса</h2>
 				<h3 align="center"><a href="{% url 'coaches:detail' c %}">{{ coach }}</a></h3>
 				<p>{{ coach_descr }}</p>
 				<h2 align="center">Ассистент курса</h2>
-				<h3 align="center"><a href="{% url 'coaches:detail' c %}">{{ assistant }}</a></h3>
+				<h3 align="center"><a href="{% url 'coaches:detail' a %}">{{ assistant }}</a></h3>
 				<p>{{ as_descr }}</p>
 			</div>
 			<div class='grey'>
