--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 .descr {
   text-align: left;
-  font-size: 10px;
+  font-size: 20px;
 }
 .contact {
   text-align: center;
@@ -20,6 +20,13 @@ body {
 h1.descr {
   font-size: 30px;
   font-weight: bold;
+}
+
+h2.descr {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+
 }
 .about{
   padding: 0px 0px;
