--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -22,20 +22,20 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{% url 'index' %}">Main</a></li>
-                    <li><a href="{% url 'contact' %}">Contacts</a></li>
-                    <li><a href="{% url 'students:list_view' %}">Students</a></li>
+                    <li class="active"><a href="{% url 'index' %}">Главная</a></li>
+                    <li><a href="{% url 'contact' %}">Контакты</a></li>
+                    <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container theme-showcase">
         <div class="jumbotron">
-            <h1 class="course">ITBursa</h1>
+            <h1 class="descr">ITBursa</h1>
             {% block content %}
-            <h2 class="course">{{ course.name }} course details</h2>
-            <p class="course">{{ course.description }}</p>
-            <h2 class="course">План курса</h2>
+            <h2 class="descr">{{ course.name }} Описание курса</h2>
+            <p class="descr">{{ course.description }}</p>
+            <h2 class="descr">План курса</h2>
             <table class="table table-striped table table-bordered">
                 <thead>
                     <tr>
