--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   	<div class="container theme-showcase">
       <div class="jumbotron">
         <div>
-          <h2 class="descr">Добро пожаловать в ITBursa</h2>
+          <h2>Добро пожаловать в ITBursa</h2>
           <p class="about">Мы специализируемся на модных языках программирования. Принципиальное наше отличие от других курсов - максимум практики и жесткая система обязательных домашних заданий.
           </p>
           <h3 class="descr">Выбирай на каком курсе ты хочешь учится!</h3>
