--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -54,6 +54,28 @@
 <div class="center bold page-header">
   <h1>Язык программирования для души</h1>
 </div>
+<div class="center bold page-header">
+  <h4>Преподвавтели курса</h4>
+</div>
+ <div class="panel panel-primary transparant-background">
+          <div class="panel-heading">
+            Учитель курса
+          </div>
+          <div class="panel-body">
+            <p><a href="{% url 'coaches:detail' course.coach.id %}">{{course.coach}}</a></p>
+            <p>{{course.coach.description}}</p>
+          </div>
+        </div>
+ </div>
+ <div class="panel panel-primary transparant-background">
+          <div class="panel-heading">
+           Ассистент курса
+          </div>
+          <div class="panel-body">
+            <p><a href="{% url 'coaches:detail' course.assistant.id %}">{{course.assistant}}</a></p>
+            <p>{{course.assistant.description}}</p>
+          </div>
+        </div>
 
 
 <!-- Table class="table align-justify"-->
