--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -26,11 +26,10 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a><li>
-            <li><a href="{% url 'contact' %}">Contacts</a><li>
-            <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
-
-            </div>
+                <li class="active"><a href="{% url 'index' %}">Main</a><li>
+                <li><a href="{% url 'contact' %}">Contacts</a><li>
+                <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
+              </ul>
           </div>
         </nav>
       </div>
@@ -38,33 +37,51 @@
 <div>
 
 <div class="container">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Theme</th>
-        <th>Description</th>
-      </tr>
-    </thead></br></br></br>
-      <tbody>
-        <h2>{{ course.name }} course details</h2>
-        <h3>{{ course.description }}</h3>
-        {%for lesson in course.lesson_set.all%}
-          <tr>
-            <td>
-              {{lesson.order}}
-            </td>
-            <td>
-              {{lesson.subject}}
-            </td>
-            <td>
-              {{lesson.description|truncatechars:200}}
-            </td>
-          </tr>
-        {%endfor%}
-      </tbody>
-    </table>
-  </div>
+   <div class="container">
+          <h2>{{ course.name }} course details</h2>
+            <h3>{{ course.description }}</h3>
+              <br>
+                <h3>Coach</h3>
+                 <table class="table">
+                    <thead>
+                      <tr><th><br><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.first_name }} {{ course.coach.last_name }}</a></br></th></tr>
+                    </thead>
+                    <tbody>   
+                          <tr><td>{{ course.coach.description }}</td></tr>
+                    </tbody>
+                  </table>
+                <h3>Assistant</h3>
+                 <table class="table">
+                    <thead>
+                      <tr><th><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.first_name }} {{ course.assistant.last_name }}</a></th></tr>
+                    </thead>
+                    <tbody>   
+                          <tr><td>{{ course.assistant.description }}</td></tr>
+                    </tbody>
+                  </table>
+              </br>
+              <h3>Course plan</h3>
+              <br>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Lesson</th>
+                    <th>Description</th>
+                  </tr>
+                </thead>
+                <tbody>   
+                    {% for lesson in course.lesson_set.all%}
+                      <tr>
+                        <td>{{ lesson.order }}</td>
+                        <td>{{ lesson.subject }}</td>
+                        <td>{{ lesson.description }}</td>
+                      </tr>
+                    {% endfor %}
+                </tbody>
+              </table>
+            </br>
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
