--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -24,9 +24,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'index' %}">Main</a></li>
-                <li><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'students:list_view' %}">Students</a></li>
+                <li><a href="{% url 'index' %}">Main</a><li>
+                <li><a href="{% url 'contact' %}">Contacts</a><li>
+                <li class="active"><a href="{% url 'students:list_view' %}">Students</a><li>  
               </ul>
             </div>
           </div>
@@ -36,36 +36,35 @@
     <div class="container">
 
     <div class="container">
-    <h2>Students list</h2>
+        <h2>Students list</h2>
         <br></br>
         <br></br>
               <table class="table">
                 <thead>
                   <tr>
-                    <th>#</th>
-                    <th>Name_Surname</th>
+                    <th>Name\Surname</th>
                     <th>Address</th>
                     <th>Skype</th>
                     <th>Course</th>
                   </tr>
                 </thead>
                 <tbody>
-                    {% for student in students %}
-                        <tr>
-                            <td>{{ student.id }}</td>
-                            <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}<a></td>
-                            <td>{{ student.address }}</td>
-                            <td>{{ student.skype }}</td>
-                            <td>{% for course in student.courses.all %}
-                                  <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
-                                {% endfor %}
-                            </td>
-                        </tr>
+                {% for student in students %}
+                <tr>
+                <td>{{ student.id }}</td>
+                  <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}<a></td>
+                  <td>{{ student.address }}</td>
+                  <td>{{ student.skype }}</td>
+                  <td>{% for course in student.courses.all %}
+                  <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+                      {% endfor %}
+                  </td>
+                  </tr>
                     {% empty %}
-                          <h3>No students</h3>
+                  <h3>No students</h3>
                     {% endfor %}
                 </tbody>
-              </table>
+            </table>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
