--- a/templates/index.html
+++ b/templates/index.html
@@ -19,77 +19,68 @@
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
+    <!-- menu start --> 
     <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+                <li><a href="{% url 'index' %}">Main</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li><a href="{% url 'students:list_view' %}">Students</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <!-- menu end --> 
+    <div class="jumbotron">
+      <div class="container">
+      <h1>Description</h1>
+      <h2>Program</h2>
+      <p> Python is a widely used general-purpose, high-level programming language. Its design philosophy emphasizes code readability, and its syntax allows programmers to express concepts in fewer lines of code.</p>
+      <p> Ruby is a dynamic, reflective, object-oriented, general-purpose programming language.</p>
+      <p> Enroll in the latest online IT courses covering important topics in software engineering.</p>
+      <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Learn more</a></p>
+      </div>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="jumbotron">
-  <div class="container">
-  <h1>Description</h1>
-  <h2>Program</h2>
-  <p> Python is a widely used general-purpose, high-level programming language. Its design philosophy emphasizes code readability, and its syntax allows programmers to express concepts in fewer lines of code.</p>
-  <p> Ruby is a dynamic, reflective, object-oriented, general-purpose programming language.</p>
-  <p> Enroll in the latest online IT courses covering important topics in software engineering.</p>
-  <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Learn more</a></p>
-  </div>
-</div>
-<div class="jumbotron">
-  <div class="container">
-    <img src="{% static 'images/pic.jpg' %}" class="img-responsive" alt="Responsive image">
-    <p>Courses can be taken in any order. If current dates are unavailable, please check back often as they are always being added.</p> 
-  </div>
-  <h1>ITBursa-2015</h1>
-  <h2>Choose your course</h2>
-    <div class="table-responsive">
-      <table class="table table-hover table-bordered">
-        <thead>
-          <tr class="success">
-            <td><strong>Course</strong></td>
-            <td><strong>Short description</strong></td>
-          </tr>
-        </thead>
-        <tbody>
-        {% for cour in courses %}
-        <tr>
-          <td><a href="{% url 'courses:detail' cour.id %}">{{cour.name}}</a>
-          </td>
-          <td>{{cour.short_description}}
-          </td>
-        </tr>
-        {% endfor %} 
-        </tbody>    
-      </table>
-    </div>
-  </div>  
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <div class="jumbotron">
+      <div class="container">
+        <img src="{% static 'images/pic.jpg' %}" class="img-responsive" alt="Responsive image">
+        <p>Courses can be taken in any order. If current dates are unavailable, please check back often as they are always being added.</p> 
+      </div>
+      <h1>ITBursa-2015</h1>
+      <h2>Choose your course</h2>
+      <div class="table-responsive">
+        <table class="table table-hover table-bordered">
+          <thead>
+            <tr class="success">
+              <td><strong>Course</strong></td>
+              <td><strong>Short description</strong></td>
+            </tr>
+          </thead>
+          <tbody>
+            {% for cour in courses %}
+            <tr>
+              <td><a href="{% url 'courses:detail' cour.id %}">{{cour.name}}</a>
+              </td>
+              <td>{{cour.short_description}}</td>
+            </tr>
+            {% endfor %}
+            </tbody>    
+        </table>
+      </div>  
+    </div>  
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static 'js/jquery.min.js' %}"></script>
