--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,87 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Student Detail</title>
-    {% load staticfiles %}
+    <title>ITBursa detail</title>
+    <style> 
+      body{background-image: url('../static/images/pic4.jpg') !important;
+      background-repeat: none; 
+      background-attachment: fixed;
+      background-size: 100%; 
+      background-position: center top}
+    </style>
+
+    <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
   </head>
   <body>
+    <!-- menu start -->   
     <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
-      </div>
-      
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li><a href="{% url 'students:list_view' %}">Students</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-    </nav>
-    <div class="column">
-      <div class="container">
-        <div class="column">
-      <div class="col-md-10 col-md-push-1">
-        <h2 class="sub-header">{{student.name}} {{student.surname}}</h2>
-        <div class="table-responsive">
-          <table class="table" border=2>
-             <tr>
-                  <th>дата рождения
-                  </th>
-                  <td>{{student.date_of_birth}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>адрес
-                  </th>
-                  <td>{{student.address}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>почта
-                  </th>
-                  <td>{{student.email}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>логин skype
-                  </th>
-                  <td>{{student.skype}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>телефон
-                  </th>
-                  <td>{{student.phone}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>курсы
-                  </th>
-                  <td>
-                    {% for cour in student.courses.all %}               
-                    <p><a href="{% url 'courses:detail' cour.id %}">{{cour.name}}</p>
-                    {% endfor %}
-                  </td>
-                </tr>
-          </table>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
         </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="{% url 'index' %}">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+            <li><a href="{% url 'students:list_view' %}">Students</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- menu end --> 
+    <div class="slash-div">
+    <h2> {{ student_detail.full_name }} <br>
+    <small>student's card </small></h2>
+    <br>
+      <div class="table-responsive">
+        <table class="table table-hover">
+                <tbody>
+                    <tr>
+                       <td><strong>Birthday</strong></td>
+                       <td>{{ student_detail.date_of_birth }}</td>                
+                    </tr>
+                    <tr>
+                       <td><strong>Address</strong></td>
+                       <td>{{ student_detail.address }}</td>                
+                    </tr>
+                    <tr>
+                       <td><strong>E-mail</strong></td>
+                       <td>{{ student_detail.email }}</td>                
+                    </tr>
+                    <tr>
+                       <td><strong>Skype</strong></td>
+                       <td>{{ student_detail.skype }}</td>                
+                    </tr>
+                    <tr>
+                       <td><strong>Phone</strong></td>
+                       <td>{{ student_detail.phone }}</td>                
+                    </tr>
+                    <tr>
+                       <td><strong>Assigned courses</strong></td>
+                       <td>
+                           {% for course in student_detail.courses.all %}
+                                <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+                           {% endfor %}
+                        </td>                
+                    </tr>
+                  </tbody>
+             </table>     
+        </div>        
+    </div>  
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>  
+  </body>
 </html>
